force-app/main/default/objects/Property_Agreement__c/Property_Agreement__c.object-meta.xml
<CustomObject>
    <label>Property Agreement</label>
    <nameField>
        <displayFormat>PA-{000}</displayFormat>
        <label>Property Agreement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Agreements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>