force-app/main/default/objects/Property_Agreement__c/fields/Commission_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Commission_Percentage__c</fullName>
    <label>Commission Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>