force-app/main/default/objects/Property_Agreement__c/fields/Commission_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Commission_Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commission Recipient</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Property_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>