force-app/main/default/objects/Property_Agreement__c/fields/Is_Commission_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Commission_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Commission Required</label>
    <type>Checkbox</type>
</CustomField>