force-app/main/default/objects/Property_Agreement__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Property Agreements</relationshipLabel>
    <relationshipName>Property_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>