force-app/main/default/objects/Property_Agreement__c/fields/Property_Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Agreement_Type__c</fullName>
    <label>Property Agreement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buyer Agreement Type</fullName>
            </value>
            <value>
                <fullName>Tenant Agreement Type</fullName>
            </value>
            <value>
                <fullName>Investor Agreement Type</fullName>
            </value>
            <value>
                <fullName>Seller Agreement Type</fullName>
                <isActive>false</isActive>
                <label>Seller Agreement Type</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>