force-app/main/default/objects/Property_Agreement__c/fields/Property_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Property_Buyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Buyer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Property Agreements</relationshipLabel>
    <relationshipName>Property_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>