force-app/main/default/objects/Property_Agreement__c/fields/Property_Owner__c.field-meta.xml
<CustomField>
    <fullName>Property_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Property Agreements (Property Owner)</relationshipLabel>
    <relationshipName>Property_Agreements1</relationshipName>
    <type>Lookup</type>
</CustomField>