force-app/main/default/objects/Property_Agreement__c/fields/Property_Tenant__c.field-meta.xml
<CustomField>
    <fullName>Property_Tenant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Tenant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Property Agreements (Property Tenant)</relationshipLabel>
    <relationshipName>Property_Agreements2</relationshipName>
    <type>Lookup</type>
</CustomField>