force-app/main/default/objects/Property_Agreement__c/fields/Terms__c.field-meta.xml
<CustomField>
    <fullName>Terms__c</fullName>
    <label>Terms</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Property_Agreement_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30-Day Escrow</fullName>
            </value>
            <value>
                <fullName>Cash Purchase</fullName>
            </value>
            <value>
                <fullName>Inspection Contingency</fullName>
            </value>
            <value>
                <fullName>Financing Contingency</fullName>
            </value>
            <value>
                <fullName>Seller to Pay Closing Costs</fullName>
            </value>
            <value>
                <fullName>No Contingencies</fullName>
            </value>
            <value>
                <fullName>Subject to Appraisal</fullName>
            </value>
            <value>
                <fullName>Lease Agreement</fullName>
            </value>
            <value>
                <fullName>Rental Agreement</fullName>
            </value>
            <value>
                <fullName>All Cash Purchase</fullName>
            </value>
            <value>
                <fullName>Leveraged Financing</fullName>
            </value>
            <value>
                <fullName>Due Diligence Period</fullName>
            </value>
            <value>
                <fullName>Renovation Contingency</fullName>
            </value>
            <value>
                <fullName>1031 Exchange</fullName>
            </value>
            <value>
                <fullName>Seller Financing</fullName>
            </value>
            <value>
                <fullName>Assignment of Leases</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>